<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_navigation"
    app:startDestination="@+id/navigation_auth">

    <fragment
        android:id="@+id/navigation_registration"
        android:name="ru.hse.project.clientmir.ui.auth.RegistrationFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration" />


    <fragment
        android:id="@+id/navigation_signin"
        android:name="ru.hse.project.clientmir.ui.auth.SignInFragment"
        android:label="@string/title_signin"
        tools:layout="@layout/fragment_signin" />


    <fragment
        android:id="@+id/navigation_auth"
        android:name="ru.hse.project.clientmir.ui.auth.AuthFragment"
        android:label="@string/title_auth"
        tools:layout="@layout/fragment_selection_auth" >
        <action
            android:id="@+id/action_navigation_auth_to_navigation_registration"
            app:destination="@id/navigation_registration" />
        <action
            android:id="@+id/action_navigation_auth_to_navigation_signin"
            app:destination="@id/navigation_signin" />
    </fragment>

</navigation>