<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="190dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/container_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_change_login">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_change_login_password_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_change_password">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_change_login_password_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/btn_cancel"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_change_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:elevation="0dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tittle_fragment_edit_card">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_change_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginStart="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/login"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tittle_fragment_edit_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/title_edit"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>